syntax = "proto3";

package JRPC;
option java_multiple_files = true;
option java_package = "JRPC";
option java_outer_classname = "ServiceProto";

// Client
message ClientMessage {
  int32 row = 1;
  int32 column = 2;
}

// Server
enum CellType {
  Player0 = 0;
  Player1 = 1;
  Empty = 2;
}

message ClientInfo {
  string name = 1;
  int32 score = 2;
  int32 wins = 3;
}

message ServerMessage {
  message Field {
    repeated CellType cellType = 1;
  }

  repeated Field field = 1;
  repeated ClientInfo clients = 2;
  ClientInfo winner = 3;
  ClientInfo nextMoveBy = 4;
}

// Service
service GameService {
  rpc SendClientMessage (ClientMessage) returns (ServerMessage) {}
  rpc SendServerMessage (ServerMessage) returns (ClientMessage) {}
}